--- a/app/config/config.json
+++ b/app/config/config.json
@@ -3,7 +3,7 @@
    "webSite": "",
    "logoUrl": "",
 
-   "dataUrl": "data/VercelliBook.xml",
+   "dataUrl": "./app/data/VercelliBook.xml",
    "sourcesUrl"       : "",
    "analoguesUrl"     : "",
    "sourcesTextsUrl" : "",
