--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.0.0",
     "gem": "2.4.3",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jshint-stylish": "~2.2.1",
     "karma": "~4.1.0",
