--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "@babel/core": "7.4.5",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
     "bower": "~1.8.8",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -32,7 +32,8 @@
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
-    "webpack-file-preprocessor-plugin": "0.0.1"
+    "webpack-file-preprocessor-plugin": "0.0.1",
+    "webpack-jquery-ui": "^2.0.1"
   },
   "engines": {
     "node": ">=0.10.0"
@@ -46,6 +47,8 @@
   },
   "dependencies": {
     "lunr": "^2.3.5",
-    "mark.js": "^8.11.1"
+    "mark.js": "^8.11.1",
+    "openseadragon": "^2.4.1",
+    "virtual-keyboard": "^1.30.1"
   }
 }
