--- a/bower.json
+++ b/bower.json
@@ -5,19 +5,18 @@
     "angular": "1.3.0",
     "json3": "3.3.0",
     "es5-shim": "4.0.0",
-    "angular-animate": "^1.3.0",
-    "angular-cookies": "^1.3.0",
-    "angular-messages": "^1.3.0",
-    "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-xml": "~1.0.7",
-    "susy": "~2.2.2",
-    "angular-touch": "~1.3.15",
-    "angular-pretty-xml": "^0.1.1",
-    "ngInfiniteScroll": "^1.3.4",
-    "angular-translate-loader-static-files": "^2.15.2",
-    "angular-translate": "^2.15.2",
+    "angular-animate": "1.3.0",
+    "angular-cookies": "1.3.0",
+    "angular-messages": "1.3.0",
+    "angular-resource": "1.3.0",
+    "angular-route": "1.3.0",
+    "angular-sanitize": "1.3.0",
+    "angular-xml": "1.0.7",
+    "susy": "2.2.2",
+    "angular-touch": "1.3.15",
+    "ngInfiniteScroll": "1.3.4",
+    "angular-translate-loader-static-files": "2.15.2",
+    "angular-translate": "2.15.2",
     "angular-loading-bar": "^0.9.0",
     "ngprogress": "^1.1.3",
     "angularjs-slider": "^6.5.1",
