--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass-loader": "^7.1.0",
     "serve-static": "^1.14.1",
     "style-loader": "^0.23.1",
+    "susy": "2.2.2",
     "tapable": "1.1.3",
     "time-grunt": "~2.0.0",
     "url-loader": "^2.0.1",
