--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "evtviewer",
   "version": "0.0.1",
   "devDependencies": {
-    "angular": "1.7.9",
     "@babel/core": "7.4.5",
+    "angular": "1.7.9",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "bower": "~1.8.8",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.0.0",
