--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-xml": "1.0.7",
     "angular-touch": "1.3.15",
     "ngInfiniteScroll": "1.3.4",
+    "angular-pretty-xml": "0.1.1",
     "angular-translate-loader-static-files": "2.15.2",
     "angular-translate": "2.15.2",
     "angular-loading-bar": "^0.9.0",
